--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -18,7 +18,7 @@
       <article class="project">
         <a href="{{project.permalink}}">
           <div class="project-card">
-            <img class="project-img" src="{{project.img_icon_path}}" alt="{{project.img_icon_description}}">
+            <img class="project-img" src="{{project.image}}" alt="{{project.image_description}}">
             <div class="project-block">
               <h3 class="project-title">{{project.title}}</h3>
               <p class="project-text">{{project.excerpt}}</p>
