--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -57,7 +57,7 @@
   }
 
   h2 {
-    font-size: $font-size-xxl;
+    font-size: $font-size-xx-large;
     color: $brand-primary;
 
     &:not(:first-child) {
