--- a/_sass/pages/_service_area.scss
+++ b/_sass/pages/_service_area.scss
@@ -22,7 +22,7 @@
   h3 {
     @extend .my-3;
     @extend .text-uppercase;
-    font-size: $font-size-md;
+    font-size: $font-size-small;
   }
 
   p {
