--- a/_includes/project_showcase.html
+++ b/_includes/project_showcase.html
@@ -8,7 +8,7 @@
           <div class="screenshot">
             <figure class="figure">
               <div class="img-wrapper" role="button" data-toggle="modal" data-target="{{modal_id}}">
-                <img src="{{screenshot.img_path}}" alt="{{screenshot.img_description}}">
+                <img src="{{screenshot.image}}" alt="{{screenshot.image_description}}">
               </div>
               <figcaption>{{screenshot.caption}}</figcaption>
             </figure>
@@ -17,7 +17,7 @@
               <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h3 id="{{modal_header_id}}" class="modal-title sr-only">{{screenshot.img_description}}</h3>
+                    <h3 id="{{modal_header_id}}" class="modal-title sr-only">{{screenshot.image_description}}</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -25,7 +25,7 @@
 
                   <div class="modal-body">
                     <figure class="figure">
-                      <img src="{{screenshot.img_path}}" alt="{{screenshot.img_description}}">
+                      <img src="{{screenshot.image}}" alt="{{screenshot.image_description}}">
                       <figcaption>{{screenshot.caption}}</figcaption>
                     </figure>
                   </div>
